--- a/src/app/pages/estudiante/cursos-intersemestrales/ver-solicitud/ver-solicitud.component.html
+++ b/src/app/pages/estudiante/cursos-intersemestrales/ver-solicitud/ver-solicitud.component.html
@@ -58,7 +58,7 @@
       <!-- Tipo -->
       <ng-container matColumnDef="tipo">
         <th mat-header-cell *matHeaderCellDef>Tipo</th>
-        <td mat-cell *matCellDef="let solicitud">Preinscripción</td>
+        <td mat-cell *matCellDef="let solicitud">{{ solicitud.tipo || 'Preinscripción' }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="['curso','fecha','estado','tipo']"></tr>
@@ -96,7 +96,7 @@
       <!-- Tipo -->
       <ng-container matColumnDef="tipo">
         <th mat-header-cell *matHeaderCellDef>Tipo</th>
-        <td mat-cell *matCellDef="let inscripcion">Inscripción</td>
+        <td mat-cell *matCellDef="let inscripcion">{{ inscripcion.tipo || 'Inscripción' }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="['cursoId','fecha','estado','tipo']"></tr>
