--- a/src/app/shared/components/request-status/request-status.component.html
+++ b/src/app/shared/components/request-status/request-status.component.html
@@ -25,20 +25,29 @@
 
   <!-- Acciones (solo si showOficio=true) -->
   <ng-container *ngIf="showOficio" matColumnDef="acciones">
-    <th mat-header-cell *matHeaderCellDef> Oficio/Resolución </th>
+    <th mat-header-cell *matHeaderCellDef> {{ headerAcciones }} </th>
     <td mat-cell *matCellDef="let element">
       <div class="acciones-container">
         <!-- Botón para descargar oficio (solo si está aprobada) -->
-        <button *ngIf="puedeDescargarOficio(element.estado)" 
-                mat-icon-button 
-                color="primary" 
+        <button *ngIf="puedeDescargarOficio(element.estado)"
+                mat-icon-button
+                color="primary"
                 (click)="onDescargarOficio(element.id)"
                 matTooltip="Descargar documento oficial">
           <mat-icon>download</mat-icon>
         </button>
-        
+
+        <!-- Botón de información para estado Pre-registrado -->
+        <button *ngIf="esEstadoPreregistrado(element.estado)"
+                mat-icon-button
+                color="primary"
+                (click)="onMostrarInfoPreregistro()"
+                matTooltip="Ver información importante">
+          <mat-icon>info</mat-icon>
+        </button>
+
         <!-- Componente original para otros casos -->
-        <app-oficio-descarga *ngIf="!puedeDescargarOficio(element.estado)" [solicitud]="element"></app-oficio-descarga>
+        <app-oficio-descarga *ngIf="!puedeDescargarOficio(element.estado) && !esEstadoPreregistrado(element.estado)" [solicitud]="element"></app-oficio-descarga>
       </div>
     </td>
   </ng-container>
@@ -47,9 +56,9 @@
   <ng-container *ngIf="showComentarios" matColumnDef="comentarios">
     <th mat-header-cell *matHeaderCellDef> Comentarios </th>
     <td mat-cell *matCellDef="let element">
-      <button *ngIf="esSolicitudRechazada(element.estado)" 
-              mat-icon-button 
-              color="primary" 
+      <button *ngIf="esSolicitudRechazada(element.estado)"
+              mat-icon-button
+              color="primary"
               (click)="onVerComentarios(element.id)"
               matTooltip="Ver comentarios de rechazo">
         <mat-icon>comment</mat-icon>
@@ -64,8 +73,8 @@
   <ng-container *ngIf="showSeleccionar" matColumnDef="seleccionar">
     <th mat-header-cell *matHeaderCellDef> Seleccionar </th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button 
-              color="primary" 
+      <button mat-icon-button
+              color="primary"
               [class.selected]="isSelected(element.id)"
               (click)="onSeleccionarSolicitud(element.id)"
               [matTooltip]="isSelected(element.id) ? 'Deseleccionar solicitud' : 'Seleccionar solicitud'">
